<resources>
    <string name="app_name">FYP2</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="create_a_new_account">Create a new Account!</string>
    <string name="sign_in_sign_up">Sign In / Sign Up</string>
    <string name="choose_field">Please choose from the fields below or Select an area</string>
    <string name="area">Area</string>
    <string name="an_area">an area:</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="tennis">Tennis</string>
    <string name="choose_your_sport">Choose your sport:</string>
    <array name="sex">
        <item>Male</item>
        <item>Female</item>
    </array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="id">ID</string>
    <string name="sex">Sex</string>
    <array name="area">
        <item> Sin El Fil </item>
        <item> Hazmieh </item>
        <item> Zouk Mosbeh </item>
    </array>

</resources>